--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
+    "@cssninja/nuxt-toaster": "^0.3.12",
     "@nuxtjs/supabase": "^1.2.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "autoprefixer": "^10.4.19",
