--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "nuxt": "^3.11.2",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
